k8s-app-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  name: solar-system
  namespace: space
spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /
          pathType: Prefix
